[package]
name = "robins_toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = "1.0.153"
serde_derive = "1.0.153"
toml = "0.7.2"
whoami = "1.3.0"
